--- a/web/index.html
+++ b/web/index.html
@@ -23,5 +23,17 @@
          Excepteur sint occaecat cupidatat non proident, <span id="resaltado" class="rojo amarillo">sunt in culpa qui officia deserunt mollit anim id est laborum</span>.
       </blockquote>
     </p>
+    <h3>Listado de frutas</h3>
+    <ul>
+      <li>Manzana
+        <ul>
+          <li>Roja</li>
+          <li>Verde</li>
+        </ul>
+      </li>
+      <li>Naranja</li>
+      <li>Pera</li>
+      <li>Sandia</li>
+    </ul>
   </body>
 </html>
