--- a/web/index.html
+++ b/web/index.html
@@ -16,6 +16,9 @@
       Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
     </p>
     <hr>
+    <h2>Imagenes en HTML</h2>
+    <img src="IMAGENES/Fedora.jpg" alt="imagen de fedora" title="Foto de Fedora" width="250px">
+    <hr>
     <h3>Tercer encabezado de la pagina</h3>
     <p>
       Lorem ipsum dolor <strong>sit amet</strong>, consectetur <em>adipisicing elit</em>, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
@@ -35,5 +38,23 @@
       <li>Pera</li>
       <li>Sandia</li>
     </ul>
+
+    <h3>Tablas</h3>
+    <table border="1">
+      <tr>
+        <th>Nombre</th>
+        <th>Apellidos</th>
+        <th>Pais</th>
+      </tr>
+      <tr>
+        <td>Mike</td>
+        <td>Gutierrez</td>
+        <td>Bolivia</td>
+      </tr>
+      <tr>
+        <td>Pablo</td>
+        <td colspan="2">Armelin</td>
+      </tr>
+    </table>
   </body>
 </html>
