--- a/web/index.html
+++ b/web/index.html
@@ -26,6 +26,32 @@
          Excepteur sint occaecat cupidatat non proident, <span id="resaltado" class="rojo amarillo">sunt in culpa qui officia deserunt mollit anim id est laborum</span>.
       </blockquote>
     </p>
+
+    <h3>Formulario</h3>
+    <form>
+      <p>
+        <label for="nombre">Nombre</label>
+        <input type="text" name="nombre" placeholder="Escribe tu nombre">
+      </p>
+
+      <p>
+        <label for="descripcion">Descripcion</label>
+        <textarea name="descripcion"></textarea>
+      </p>
+
+      <input type="radio" name="genero" value="hombre"> Hombre <br>
+      <input type="radio" name="genero" value="nujer"> Mujer <br>
+      <input type="radio" name="genero" value="nada"> Nada <br>
+
+      <select>
+        <option value="hombre">Hombre</option>
+        <option value="mujer">Mujer</option>
+        <option value="nada">Nada</option>
+      </select>
+
+      <input type="submit" value="Enviar Formulario">
+    </form>
+
     <h3>Listado de frutas</h3>
     <ul>
       <li>Manzana
