--- a/javascript/hola_mundo/index.html
+++ b/javascript/hola_mundo/index.html
@@ -34,11 +34,24 @@
     <script type="text/javascript" src="js/24-plantillas.js"></script>
     <script type="text/javascript" src="js/25-arrays.js"></script>
     <script type="text/javascript" src="js/26-arrays-multi.js"></script>
-    -->
     <script type="text/javascript" src="js/27-ejercicio-arrays.js"></script>
+    -->
   </head>
   <body>
     <h1>Curso JavaScript</h1>
     <p>Nuetro primer script en JS</p>
+
+    <section id="miseccion">
+      <h1 id="encabezado">Listado de textos de los divs</h1>
+    </section>
+
+    <div id="micaja">
+      Hola soy una caja
+    </div>
+    <div class="amarrillo">Soy el primer div</div>
+    <div class="rojo">Yo el segundo div</div>
+    <div class="rojo">El tercer soy yo</div>
+    <script type="text/javascript" src="js/28-dom.js"></script>
+    <script type="text/javascript" src="js/29-bom.js"></script>
   </body>
 </html>
