--- a/javascript/hola_mundo/index.html
+++ b/javascript/hola_mundo/index.html
@@ -35,12 +35,27 @@
     <script type="text/javascript" src="js/25-arrays.js"></script>
     <script type="text/javascript" src="js/26-arrays-multi.js"></script>
     <script type="text/javascript" src="js/27-ejercicio-arrays.js"></script>
+    <script type="text/javascript" src="js/30-eventos.js"></script>
     -->
+    <script type="text/javascript" src="js/31-timers.js"></script>
   </head>
   <body>
     <h1>Curso JavaScript</h1>
+
+    <p>
+      <button id="boton">Presioname</button>
+      <button id="start">Start</button>
+      <button id="stop">Stop</button>
+
+    <form>
+      <input type="text" name="nombre" id="campo_nombre">
+    </form>
+
+    </p>
+
     <p>Nuetro primer script en JS</p>
 
+    <hr>
     <section id="miseccion">
       <h1 id="encabezado">Listado de textos de los divs</h1>
     </section>
@@ -51,7 +66,11 @@
     <div class="amarrillo">Soy el primer div</div>
     <div class="rojo">Yo el segundo div</div>
     <div class="rojo">El tercer soy yo</div>
+    <!--scripts-->
+    <!--
     <script type="text/javascript" src="js/28-dom.js"></script>
     <script type="text/javascript" src="js/29-bom.js"></script>
+    -->
+    <!--scripts-->
   </body>
 </html>
