Ejercicio de Formulario

--- a/javascript/hola_mundo/index.html
+++ b/javascript/hola_mundo/index.html
@@ -37,6 +37,7 @@
     <script type="text/javascript" src="js/27-ejercicio-arrays.js"></script>
     <script type="text/javascript" src="js/30-eventos.js"></script>
     -->
+    <script type="text/javascript" src="js/30-eventos.js"></script>
     <script type="text/javascript" src="js/31-timers.js"></script>
   </head>
   <body>
